--- a/style.less
+++ b/style.less
@@ -3,8 +3,8 @@ Theme Name: Coni
 Theme URI: https://www.quemalabs.com/theme/coni/
 Author: Quema Labs
 Author URI: https://www.quemalabs.com
-Description: A Premium Theme
-Version: 1.0.0
+Description: Coni is a multipurpose theme, focus on corporate and business. With responsive and minimalist design. Includes an awesome One Page design for the front page, with unique section to present your content, like Services, Features, Team members, Videos, Images, Testimonials, Pricing tables, Clients, Blog posts and much more. If you need more features you should check the PRO version, Coni Pro: https://www.quemalabs.com/theme/coni-pro/
+Version: 1.0.1
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.en.html
 Text Domain: coni
@@ -17,16 +17,16 @@ TABLE OF CONTENTS
 ----------------------------------------------------------------
 1. Header
 2. Home
-2. Blog & Pages
-3. Sidebar
-4. Footer
-5. Comments
+3. Blog & Pages
+4. Sidebar
+5. Footer
+6. Comments
 7. Flickity
 8. Pace
-10. WordPress Default
-11. External Plugins
-12. Global Styles
-13. Responsive Styles
+9. WordPress Default
+10. External Plugins
+11. Global Styles
+12. Responsive Styles
 LESS Variables and Mixins
 ----------------------------------------------------------------
 */
