--- a/theme_less/_home.less
+++ b/theme_less/_home.less
@@ -1037,6 +1037,10 @@ Blog Section
 	margin-right: 4%;
 	margin-bottom: 3%;
 }
+.blog-wrap .blog-item img{
+	width: 100%;
+	height: auto;
+}
 .blog-wrap  .blog-time-date{
 	display: block;
 	text-align: right;
