--- a/theme_less/_header.less
+++ b/theme_less/_header.less
@@ -8,7 +8,7 @@
 	background-size: cover;
 	background-position: center;
 }
-.home #header{
+.home.page #header{
 	margin-bottom: 0;
 }
 .search_open #header{
