--- a/theme_less/_home.less
+++ b/theme_less/_home.less
@@ -442,6 +442,7 @@ Phone Section
 	vertical-align: top;
 	margin: 0 2% 8%;
 	text-align: left;
+	float: none;
 }
 .phone-services .service .service-text h4{
 	color: #fff;
